# human-signal-score

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: README.md  sample1.txt  sample2.txt
originality_score/: __init__.py  cli.py  score.py
originality_score/tests/: test_score.py
